[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/PlayerReference.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/jump.ogg" type="AudioStream" id=2]
[ext_resource path="res://assets/dino.png" type="Texture" id=3]
[ext_resource path="res://assets/sfx/tudum.ogg" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
resource_name = "walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5, 2 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6 )

[node name="PlayerReference" type="KinematicBody2D"]
position = Vector2( 46, 127 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )
texture = ExtResource( 3 )
hframes = 2
region_rect = Rect2( 0, 0, 32, 32 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
autoplay = "walk"
anims/walk = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 10 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -1, 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
visible = false
shape = SubResource( 3 )

[node name="JumpSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -12.0

[node name="KilledSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 4 )
volume_db = -12.0
[connection signal="area_entered" from="Hitbox" to="." method="_on_Area2D_area_entered"]
